<resources>
    <string name="app_name">Recorder</string>

    <!-- activity_list.xml -->
    <string name="activity_record_list_title">Record List</string>

    <!-- activity_setting.xml -->
    <string name="activity_record_setting_title">Setting</string>

    <string name="recording_source_title">Recording Source</string>
    <string name="recording_format_title">Recording File Format</string>
    <string name="recording_channels_title">Recording Channels</string>
    <string name="recording_sampling_rate_title">Recording Sampling Rate</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="more">More</string>
</resources>