<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/imgBtn_state"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:src="@drawable/btn_play"
            android:scaleType="fitEnd"
            android:background="#00000000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgBtn_state"
            android:layout_marginStart="16dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_regular"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gilroy_regular"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_file_record_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_file_created_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <CheckBox
            android:id="@+id/selected_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:focusable="false"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_SimpleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.aone.recorder.views.VisualizerView
            android:id="@+id/visualizerView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_rename"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                android:fontFamily="@font/gilroy_regular"
                android:text="@string/rename"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:tint="@color/secondaryTextColor"
                    android:src="@drawable/btn_arrow_right" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>